# tarubot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json
.do/: deploy.template.yaml
prisma/: schema.prisma
src/: index.ts
src/commands/: admin.ts  character.ts  config.ts  ping.ts
src/core/: tarubot.ts
src/events/: error.ts  interactionCreate.ts  ready.ts
src/services/: db.ts  lodestone.ts
src/types/: global.d.ts
tarubot/: __init__.py  main.py
tarubot/cogs/: members.py  utility.py
tarubot/datasource/: __init__.py  ffxiv.py
tarubot/lib/: __init__.py  logging.py  tarubot.py
tarubot/lib/db/: __init__.py  db.py
tarubot/lib/nodestone/: __init__.py  character.py
tarubot/models/: __init__.py  character.py  db.py  freecompany.py  game_character.py  member.py
tarubot/ui/modals/: lobby.py
