[project]
name = "tarubot"
version = "2.0.0"
description = ""
authors = [{ name = "Connor Maddox", email = "connor@connstruct.tech" }]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.13"
dependencies = [
    "disnake (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "pynacl (>=1.5.0,<2.0.0)",
    "setuptools (>=75.8.0,<76.0.0)",
]

[project.scripts]
tarubot = "tarubot.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
